--- a/zero_voip/views/res_config_settings_views.xml
+++ b/zero_voip/views/res_config_settings_views.xml
@@ -7,7 +7,7 @@
         <field name="inherit_id" ref="voip.res_config_settings_view_form"/>
         <field name="arch" type="xml">
             <xpath expr="//label[@for='pbx_ip']" position="replace">
-                <label for="pbx_ip" class="col-md-4 o_light_label" string="OnSIP Domain"/>
+                <label for="pbx_ip" class="col-md-4 o_light_label" string="zero Domain"/>
             </xpath>
         </field>
     </record>
